fix: unreadable quote text for sticker replies
The background used to be transparent,
and the text color has been changed to white in e69fd47cfaa5aec38a6401fab01cd64f6b33d351,
but then we changed background color of the quote bubbles
to be the same as the message bubble color for regular messages
in f83ce46cbf80a4c019d3be02222b164a8d58fe56, so now
there is no need to override colors.

--- a/packages/frontend/scss/message/_message.scss
+++ b/packages/frontend/scss/message/_message.scss
@@ -238,11 +238,6 @@
 
       & > .quote {
         margin: 0;
-        color: white;
-
-        .quoted-text {
-          color: white;
-        }
       }
     }
   }
